--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.7"
   },
